# dazzler-component-template

./: .gitignore  MANIFEST.in  README.md  justfile  package-lock.json  package.json  requirements.txt  setup.cfg  webpack.config.js
src/python/dazzler_component_template/: __init__.py
src/ts/: index.ts  types.d.ts
src/ts/components/: ComponentTemplate.tsx
tests/: app.py
tests/pages/: component_template.py
