[metadata]
name = dazzler_component_template
version = 0.1.0
description = Dazzler component
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dazzler, component
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src/python
packages = find:
include_package_data = true
install_requires =
    dazzler>=0.8.1

[options.packages.find]
where = src/python
exclude =
    tests
    tests.*
    docs
    assets

[options.entry_points]
console_scripts =
    dazzler = dazzler._dazzler:cli
